--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,10 @@
     </string-array>
     <string name="complete_registration">Complete Registration</string>
 
+    <string name="home">Home</string>
+    <string name="diary">Diary</string>
+    <string name="profile">Profile</string>
+
     <!--Error Messages-->
     <string name="error">Hata!</string>
     <string name="unexpected_error_message">An unexpected error occurred!</string>
