--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,18 @@
     <string name="diary">Diary</string>
     <string name="profile">Profile</string>
 
+    <string name="breakfast">Breakfast</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
+    <string name="other">Snacks</string>
+    <string name="add_food">Add Food</string>
+    <string name="total">Total</string>
+    <string name="cal">%s cal</string>
+    <string name="search_food">Search food…</string>
+    <string name="change">Change</string>
+    <string name="food">Food: %s</string>
+    <string name="serving">Serving: %s %s</string>
+
     <!--Error Messages-->
     <string name="error">Hata!</string>
     <string name="unexpected_error_message">An unexpected error occurred!</string>
